reworking api. eveything is broke
