# server/route/match/get_match.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/bardic/gocrib/server/route/helpers"
+	"github.com/bardic/gocrib/vo"
 	"github.com/labstack/echo/v4"
 )
 
@@ -15,13 +16,13 @@ import (
 //	@Tags		match
 //	@Accept		json
 //	@Produce		json
-//	@Param		id	query		string	true	"Match ID"'
+//	@Param		id	path		int	true	"Match ID"'
 //	@Success	200	{object}	queries.Match
 //	@Failure	404	{object}	error
 //	@Failure	422	{object}	error
-//	@Router		/match/ [get]
+//	@Router		/match/{id} [get]
 func GetMatch(c echo.Context) error {
-	p := c.Request().URL.Query().Get("id")
+	p := c.Param("id")
 	id, err := strconv.Atoi(p)
 
 	if err != nil {
@@ -33,5 +34,8 @@ func GetMatch(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, err)
 	}
 
-	return c.JSON(http.StatusOK, m)
+	return c.JSON(http.StatusOK, vo.MatchDetailsResponse{
+		MatchId:   m.ID,
+		GameState: m.Gamestate,
+	})
 }
