# server/route/player/put_player_ready.go
@@ -9,15 +9,12 @@ import (
 	"github.com/bardic/gocrib/server/controller"
 	conn "github.com/bardic/gocrib/server/db"
 	"github.com/bardic/gocrib/server/route/helpers"
+	"github.com/bardic/gocrib/vo"
 
 	"github.com/labstack/echo/v4"
 )
 
 // PReady struct
-type PReady struct {
-	MatchId  int32 // MatchId
-	PlayerId int32 // PlayerId
-}
 
 // Update player by id to be ready. Returns true if all players are ready
 //
@@ -26,14 +23,14 @@ type PReady struct {
 //	@Tags		players
 //	@Accept		json
 //	@Produce	json
-//	@Param		pReady	body		PReady	true	"player id to update"
+//	@Param		pReady	body		vo.PlayerReady	true	"player id to update"
 //	@Success	200		{object}	bool
 //	@Failure	400		{object}	error
 //	@Failure	404		{object}	error
 //	@Failure	500		{object}	error
 //	@Router		/match/player/ready [put]
 func PlayerReady(c echo.Context) error {
-	pReady := new(PReady)
+	pReady := new(vo.PlayerReady)
 	if err := c.Bind(pReady); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
